--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </td>
             </tr>
         </table>
-        <p class="sub-text2 footer-hashen">A Web Solution by teamn <a class="rhc" href="https://www.linkedin.com/in/rubulhoquechoudhury"><b>MEDITECH</b></a></p> <br>
+        <p class="sub-text2 footer-hashen">A Web Solution by team <a class="rhc" href="https://www.linkedin.com/in/rubulhoquechoudhury"><b>MEDITECH</b></a></p> <br>
         <a class="rhc" href="mailto:rubulhoquechoudhury123@gmail.com">Contact Email</a>
     </center>
     
